Greenhouse task is updated